# football_analytics

./: README.md  Signality Tracking Data Engineering - Hammarby vs. IFElfsborg 22.07.2019.ipynb
2_data_parsing/: FCPython.py  StatsBomb Parsing and Data Engineering WSL.ipynb
2_data_parsing/archive/: Scrape_FBref.ipynb  StatsBomb Stoke City.ipynb  TM Pull Request test.ipynb  Understat.ipynb
2_data_parsing/understat/: big5_1516.Rmd  big5_1617.Rmd
data/reference/: FBRef 2020-21 T5 League Data.xlsx  Tidy FBRef 20-21 Player Data.csv
data/stats-perform/: CPL Player By Game 2020.xlsx  CPL Player Totals 2019.csv  CPL Player Totals 2019.xlsx  CPL Player Totals 2020(1).xlsx  CPL Player Totals 2020.csv  CPL Player Totals 2020.xlsx  CPL Player by Game 2019.csv  CPL Player by Game 2020.csv  CPL Team By Game 2020.xlsx  CPL Team Totals 2019.csv  CPL Team Totals 2019.xlsx  CPL Team Totals 2020.csv  CPL Team Totals 2020.xlsx  CPL Team by Game 2019.csv  CPL Team by Game 2020.csv  Metric Definitions.xlsx
docs/opta/: ReadMe.md  (+5 more)
research/: Sports Analytics - A Selected Bibliography.docx
scripts/: EPV_grid.csv  Metrica_Viz.py  Signality_EPV.py  Signality_PitchControl.py  footyviz.py
scripts/soccerdata/: CONTRIBUTING.rst  LICENSE.rst  Makefile  README.rst  noxfile.py  pyproject.toml  setup.cfg
scripts/soccerdata/docs/: conf.py  faq.rst  index.rst  intro.rst  output.csv  requirements.txt
scripts/soccerdata/docs/_static/: artwork.ai  default.css
scripts/soccerdata/docs/datasources/: ClubElo.ipynb  ESPN.ipynb  FBref.ipynb  FiveThirtyEight.ipynb  MatchHistory.ipynb  SoFIFA.ipynb  WhoScored.ipynb  index.rst
scripts/soccerdata/docs/examples/: ClubElo - Evolution of current top teams.ipynb  MatchHistory - Home advantage.ipynb  index.rst
scripts/soccerdata/docs/howto/: custom-leagues.rst  index.rst  proxy.rst
scripts/soccerdata/docs/reference/: base.rst  clubelo.rst  espn.rst  fbref.rst  fivethirtyeight.rst  index.rst  matchhistory.rst  sofifa.rst  utils.rst  whoscored.rst
scripts/soccerdata/docs/topics/: index.rst
scripts/soccerdata/soccerdata/: __init__.py  _common.py  _config.py  clubelo.py  espn.py  fbref.py  fivethirtyeight.py  match_history.py  sofifa.py  whoscored.py
scripts/soccerdata/tests/: __init__.py  conftest.py  test_ClubElo.py  test_ESPN.py  test_FBref.py  test_FiveThirtyEight.py  test_Integration.py  test_MatchHistory.py  test_SoFIFA.py  test_Whoscored.py  test_common.py  test_config.py
(+5370 files in other folders)
